@@ -108,6 +108,7 @@ public:
 		DEF1_MODWHEEL,
 		DEF1_PRESSURE,
 		DEF1_VELOCITY,
+		DEF1_CHANNEL,
 		DEF1_NOTEOFF,
 
 		CHO1_WET,
