@@ -116,7 +116,7 @@
        <item row="0" column="0" colspan="4">
         <widget class="drumkv1widget_elements" name="Elements" />
        </item>
-       <item row="0" column="4" colspan="8">
+       <item row="0" column="4" colspan="9">
         <widget class="QGroupBox" name="Gen1GroupBox">
          <property name="title">
           <string>GEN</string>
@@ -296,7 +296,7 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="5" rowspan="2" colspan="7">
+       <item row="1" column="5" rowspan="2" colspan="8">
         <widget class="QGroupBox" name="Lfo1GroupBox">
          <property name="title">
           <string>LFO</string>
@@ -562,7 +562,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="5" colspan="4">
+       <item row="3" column="5" colspan="5">
         <widget class="QGroupBox" name="Def1GroupBox">
          <property name="title">
           <string>DEF</string>
@@ -609,6 +609,16 @@
            </widget>
           </item>
           <item>
+           <widget class="drumkv1widget_combo" name="Def1ChannelKnob">
+            <property name="toolTip">
+             <string>DEF Channel</string>
+            </property>
+            <property name="text">
+             <string>Channel</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="drumkv1widget_combo" name="Def1NoteoffKnob">
             <property name="toolTip">
              <string>DEF Note Off</string>
@@ -621,7 +631,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="9" colspan="3">
+       <item row="3" column="10" colspan="3">
         <widget class="QGroupBox" name="Out1GroupBox">
          <property name="title">
           <string>OUT</string>
